Add MolenMaker class and integrate with MolenDataClass
- Added import statement for `MolenMaker` in `MolenDataClass.ts`.
- Added `molenMakers` property to `MolenDataClass` and updated constructor.
- Created `MolenMaker` class in `MolenMaker.ts` with properties `id`, `name`, `year`, and `molenDataId`.
- Updated `MolenData.ts` to include `molenMakers` in the `MolenData` interface.
- Updated `molen-dialog.component.html` to display `molenMakers` list with names and years.

--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
@@ -55,6 +55,13 @@
 
       <p *ngIf="molen.eigenaar"><strong>Eigenaar:</strong> {{ molen.eigenaar }}</p>
 
+      <p><strong>Molen makers:</strong></p>
+      <ul>
+        <li *ngFor="let maker of molen.molenMakers">
+          {{ maker.name }} - {{maker.year}}
+        </li>
+      </ul>
+
       <p *ngIf="molen.opvolger"><strong>Opvolger: </strong> <button class="urlButton" (click)="GoToMolen(molen.opvolger)">{{molen.opvolger}}</button></p>
       <p *ngIf="molen.voorganger"><strong>Voorganger: </strong> <button class="urlButton" (click)="GoToMolen(molen.voorganger)">{{molen.voorganger}}</button></p>
       <p *ngIf="molen.verplaatstNaar"><strong>Verplaatst naar: </strong> <button class="urlButton" (click)="GoToMolen(molen.verplaatstNaar)">{{molen.verplaatstNaar}}</button></p>
