--- a/molenapplicatie.client/src/app/loader/loader.component.scss
+++ b/molenapplicatie.client/src/app/loader/loader.component.scss
@@ -1,5 +1,4 @@
 @import '../../Utils/Variables.scss';
-
 .loadingVisible {
   opacity: 1;
 }
@@ -9,7 +8,7 @@
 }
 
 .loader-container {
-  transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease; /* Smooth fade transition */
   position: fixed;
   width: 100%;
   height: 100%;
@@ -20,6 +19,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  pointer-events: none; /* Optional: avoids blocking interactions when invisible */
 }
 
 .loader {
@@ -32,47 +32,23 @@
   margin-left: -13px;
   border-radius: 60px;
   animation: loader 0.8s linear infinite;
-  -webkit-animation: loader 0.8s linear infinite;
 }
 
 @keyframes loader {
   0% {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
     border: 4px solid #36d8f4;
     border-left-color: transparent;
   }
 
   50% {
-    -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
     border: 4px solid #36f43c;
     border-left-color: transparent;
   }
 
   100% {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
-    border: 4px solid #36d8f4;
-    border-left-color: transparent;
-  }
-}
-
-@-webkit-keyframes loader {
-  0% {
-    -webkit-transform: rotate(0deg);
-    border: 4px solid #36d8f4;
-    border-left-color: transparent;
-  }
-
-  50% {
-    -webkit-transform: rotate(180deg);
-    border: 4px solid #36f43c;
-    border-left-color: transparent;
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
     border: 4px solid #36d8f4;
     border-left-color: transparent;
   }
@@ -82,6 +58,7 @@
   .loader-container {
     background-image: url('../../../public/Assets/Background/Buurman-en-Buurman-loader-background-phone.jpg');
   }
+
   .loader {
     width: 60px;
     height: 60px;
