Refactor MolenDataClass and related services
Updated MolenDataClass to improve property naming for clarity, changing `lat` and `long` to `latitude` and `longitude`, and renaming `modelType` to `modelTypes`. Added optional properties for enhanced data structure.

Adjusted MapService to reflect property name changes and updated marker coordinates.

Modified MolenService to include a new `response` property for better data handling.

Updated HTML templates to align with new property names and improved user experience with more descriptive filter options in the UI.

Revised RootComponent to utilize the new method for retrieving molens with images.

--- a/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.html
+++ b/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.html
@@ -25,7 +25,7 @@
          [value]="'remainder'"
          [(ngModel)]="selectedOption" />
   <label for="remainder">
-    Remainder
+    Overblijfselen
   </label>
   <br />
   <input type="radio"
@@ -34,7 +34,7 @@
          [value]="'existing'"
          [(ngModel)]="selectedOption" />
   <label for="existing">
-    Existing
+    Alle bestaande molens
   </label>
   <br />
   <input type="radio"
@@ -43,7 +43,7 @@
          [value]="'disappeared'"
          [(ngModel)]="selectedOption" />
   <label for="disappeared">
-    Disappeared
+    Verdwenen
   </label>
   <div *ngIf="selectedOption == 'disappeared'">
     <select class="provincie-dropdown" [(ngModel)]="provincie">
