Refactor components to replace MolenDataClass with MolenData and clean up unused imports

--- a/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/dialogs/molen-dialog/molen-dialog.component.html
@@ -38,8 +38,10 @@
 
       <p><strong>Model Types:</strong></p>
       <ul>
-        <li *ngFor="let model of molen.modelTypes">
-          {{ model.name }}
+        <li *ngFor="let association of molen.molenTypeAssociations">
+          <span *ngIf="association.molenType != null">
+            {{ association.molenType.name }}
+          </span>
         </li>
       </ul>
 
