Implement map page layout and functionality with filters, data fetching, and styling

--- a/molenapplicatie.client/src/app/root/root.component.html
+++ b/molenapplicatie.client/src/app/root/root.component.html
@@ -29,6 +29,6 @@
     <div class="MolenImageCount"> {{getMolenWithImageAmount}} molens met een foto</div>
   </div>
   <div class="mapContainer">
-    <router-outlet></router-outlet>
+    <ng-content></ng-content>
   </div>
 </div>
