Update map-page component to use getMolens for filter changes and refactor service imports for consistency

--- a/molenapplicatie.client/src/app/map-page/map-page.component.html
+++ b/molenapplicatie.client/src/app/map-page/map-page.component.html
@@ -1,4 +1,4 @@
-<layout [onFilterChange]="onFilterChanged">
+<layout [onFilterChange]="getMolens">
   <section class="MapComponent">
     <div [id]="mapPageId" class="map"></div>
   </section>
