--- a/molenapplicatie.client/src/app/map-page/map-page.component.scss
+++ b/molenapplicatie.client/src/app/map-page/map-page.component.scss
@@ -1,18 +1,20 @@
-@import '../../Utils/Variables.scss';
+@import "../../Utils/Variables.scss";
 
 .container {
   margin: auto;
   width: 95%;
-  color: #0058A2;
+  color: #0058a2;
   display: flex;
 }
 
-header, .mapContainer {
+header,
+.mapContainer {
   margin: auto;
   width: 85%;
 }
 
-.container, .mapContainer {
+.container,
+.mapContainer {
   height: 90vh;
 }
 
@@ -40,7 +42,7 @@ header, .mapContainer {
 .topInfo span {
   font-size: 30px;
   font-weight: 900;
-  color: #0058A2;
+  color: #0058a2;
   height: 50px;
 }
 
@@ -48,11 +50,14 @@ header, .mapContainer {
   height: 100%;
 }
 
-.topInfo .topButton, .topInfo .icon {
+.topInfo .topButton,
+.topInfo .icon {
   float: right;
 }
 
-.topInfo .topButton, .topInfo .icon, .allButtons .topButton {
+.topInfo .topButton,
+.topInfo .icon,
+.allButtons .topButton {
   background-color: grey;
   display: block;
   color: #f2f2f2;
@@ -77,7 +82,8 @@ header, .mapContainer {
   justify-content: center;
 }
 
-.topInfo .topButton:hover, .allButtons .topButton:hover {
+.topInfo .topButton:hover,
+.allButtons .topButton:hover {
   background-color: #ddd;
   color: black;
 }
@@ -88,7 +94,8 @@ header, .mapContainer {
 }
 
 @media screen and (max-width: $Media_width) {
-  .container, header {
+  .container,
+  header {
     width: 85%;
   }
 
@@ -109,7 +116,10 @@ header, .mapContainer {
     margin: 5px;
   }
 
-  .topInfo .topButton:not(:last-child), .topInfo .placeSearch, .topInfo .placeSearch, .container .allButtons {
+  .topInfo .topButton:not(:last-child),
+  .topInfo .placeSearch,
+  .topInfo .placeSearch,
+  .container .allButtons {
     display: none;
   }
 
@@ -187,9 +197,9 @@ header, .mapContainer {
   }
 }
 
-.MapComponent{
-    width:100%;
-    height:100%;
+.MapComponent {
+  width: 100%;
+  height: 100%;
 }
 .map {
   margin: auto;
@@ -197,7 +207,12 @@ header, .mapContainer {
   width: 100%;
   border-radius: 20px;
   border: 2px solid black;
-  -webkit-box-shadow: 0px 0px 19px 12px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0px 0px 19px 12px rgba(0,0,0,0.5);
-  box-shadow: 0px 0px 19px 12px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0px 0px 19px 12px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0px 0px 19px 12px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 19px 12px rgba(0, 0, 0, 0.5);
+}
+
+.map {
+  z-index: 0;
+  position: relative;
 }
