--- a/molenapplicatie.client/src/app/root/root.component.html
+++ b/molenapplicatie.client/src/app/root/root.component.html
@@ -1,32 +1,62 @@
 <header *ngIf="!error">
-  <div class="{{visible ? 'responsive' : ''}} topInfo" id="mytopInfo">
-    <section class="logo-div">
-      <span class="MolenImageCountPhone">{{getMolenWithImageAmount}}</span>
-      <img class="logo" src="Assets/Background/Buurman-Buurman-logo.webp" alt="Alternate Text" />
-      <span>Molens</span>
-    </section>
-    <div *ngIf="visible" class="placeSearch">
-      <app-dropdown [(selectedPlace)]="selectedPlace" (selectedPlaceChange)="onPlaceChange($event)"></app-dropdown>
+  <div class="{{ visible ? 'responsive' : '' }} topInfo" id="mytopInfo">
+    <div class="searchBarContainer">
+      <app-search-bar
+        [(selectedPlace)]="selectedPlace"
+        (selectedPlaceChange)="onPlaceChange($event)"
+        (selectedMolenChange)="onMolenChange($event)"
+        (selectedTypeChange)="onTypeChange($event)"
+      ></app-search-bar>
     </div>
-    <div *ngIf="visible" class="topButton" (click)="updateMolens()">Update molens</div>
-    <div *ngIf="visible" class="topButton" (click)="searchForNewMolens()">Zoek voor nieuwe molens</div>
-    <div *ngIf="visible" class="topButton" (click)="filterMap()">Filter map</div>
-    <img class="buurmanEnBuurmanImg" src="Assets/Background/Buurman-Buurman-events.png" alt="Alternate Text" />
-    <div class="icon" (click)="openInfoMenu()">
-      <i class="fa fa-bars"></i>
+    <div class="topInfoContent">
+      <section class="logo-div">
+        <span class="MolenImageCountPhone">{{ getMolenWithImageAmount }}</span>
+        <img
+          class="logo"
+          src="Assets/Background/Buurman-Buurman-logo.webp"
+          alt="Alternate Text"
+        />
+        <span>Molens</span>
+      </section>
+      <div *ngIf="visible" class="searchBarContainer">
+        <app-search-bar
+          [(selectedPlace)]="selectedPlace"
+          (selectedPlaceChange)="onPlaceChange($event)"
+          (selectedMolenChange)="onMolenChange($event)"
+          (selectedTypeChange)="onTypeChange($event)"
+        ></app-search-bar>
+      </div>
+      <div *ngIf="visible" class="topButton" (click)="updateMolens()">
+        Update molens
+      </div>
+      <div *ngIf="visible" class="topButton" (click)="searchForNewMolens()">
+        Zoek voor nieuwe molens
+      </div>
+      <div *ngIf="visible" class="topButton" (click)="filterMap()">
+        Filter map
+      </div>
+      <img
+        class="buurmanEnBuurmanImg"
+        src="Assets/Background/Buurman-Buurman-events.png"
+        alt="Alternate Text"
+      />
+      <div class="icon" (click)="openInfoMenu()">
+        <i class="fa fa-bars"></i>
+      </div>
     </div>
   </div>
 </header>
 <div *ngIf="!error" class="container">
   <div class="allButtons">
     <h2>Menu</h2>
-    <div class="placeSearch">
-      <app-dropdown [(selectedPlace)]="selectedPlace" (selectedPlaceChange)="onPlaceChange($event)"></app-dropdown>
-    </div>
     <div class="topButton" (click)="updateMolens()">Update molens</div>
-    <div class="topButton" (click)="searchForNewMolens()">Zoek voor nieuwe molens</div>
+    <div class="topButton" (click)="searchForNewMolens()">
+      Zoek voor nieuwe molens
+    </div>
     <div class="topButton" (click)="filterMap()">Filter map</div>
-    <div class="MolenImageCount"> {{getMolenWithImageAmount}} molens met een foto</div>
+    <div class="MolenImageCount">
+      {{ getMolenWithImageAmount }} molens met een foto
+    </div>
   </div>
   <div class="mapContainer">
     <ng-content></ng-content>
