--- a/molenapplicatie.client/src/app/root/root.component.scss
+++ b/molenapplicatie.client/src/app/root/root.component.scss
@@ -1,18 +1,20 @@
-@import '../../Utils/Variables.scss';
+@import "../../Utils/Variables.scss";
 
 .container {
   margin: auto;
   width: 95%;
-  color: #0058A2;
+  color: #0058a2;
   display: flex;
 }
 
-header, .mapContainer {
+header,
+.mapContainer {
   margin: auto;
   width: 85%;
 }
 
-.container, .mapContainer {
+.container,
+.mapContainer {
   height: 90vh;
 }
 
@@ -21,11 +23,20 @@ header, .mapContainer {
   background-color: transparent;
   position: relative;
   transition: all 0.3s ease;
-  z-index: 1;
+  z-index: 100;
+  overflow: visible;
   justify-content: center;
   align-items: center;
   display: flex;
   height: 60px;
+}
+
+.topInfoContent {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .MolenImageCount {
@@ -40,7 +51,7 @@ header, .mapContainer {
 .topInfo span {
   font-size: 30px;
   font-weight: 900;
-  color: #0058A2;
+  color: #0058a2;
   height: 50px;
 }
 
@@ -48,11 +59,14 @@ header, .mapContainer {
   height: 100%;
 }
 
-.topInfo .topButton, .topInfo .icon {
+.topInfo .topButton,
+.topInfo .icon {
   float: right;
 }
 
-.topInfo .topButton, .topInfo .icon, .allButtons .topButton {
+.topInfo .topButton,
+.topInfo .icon,
+.allButtons .topButton {
   background-color: grey;
   display: block;
   color: #f2f2f2;
@@ -77,7 +91,8 @@ header, .mapContainer {
   justify-content: center;
 }
 
-.topInfo .topButton:hover, .allButtons .topButton:hover {
+.topInfo .topButton:hover,
+.allButtons .topButton:hover {
   background-color: #ddd;
   color: black;
 }
@@ -87,8 +102,14 @@ header, .mapContainer {
   background-color: grey;
 }
 
+.topInfo .searchBarContainer {
+  margin-left: 160px;
+  width: 500px;
+}
+
 @media screen and (max-width: $Media_width) {
-  .container, header {
+  .container,
+  header {
     width: 85%;
   }
 
@@ -98,7 +119,7 @@ header, .mapContainer {
     margin-top: 70px;
   }
 
-  .topInfo .placeSearch {
+  .topInfo .searchBarContainer {
     float: right;
     display: block;
     color: #f2f2f2;
@@ -109,7 +130,10 @@ header, .mapContainer {
     margin: 5px;
   }
 
-  .topInfo .topButton:not(:last-child), .topInfo .placeSearch, .topInfo .placeSearch, .container .allButtons {
+  .topInfo .topButton:not(:last-child),
+  .topInfo .searchBarContainer,
+  .topInfo .searchBarContainer,
+  .container .allButtons {
     display: none;
   }
 
@@ -128,7 +152,7 @@ header, .mapContainer {
     height: auto;
   }
 
-  .topInfo.responsive .placeSearch {
+  .topInfo.responsive .searchBarContainer {
     border: none;
     float: none;
     display: block;
