Refactor filter button styling to remove conditional margin and simplify layout

--- a/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.html
+++ b/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.html
@@ -56,13 +56,7 @@
     </option>
   </select>
 
-  <br />
-  <button
-    class="default-button filter-button {{
-      selectedFilter.toestand == 'verdwenen' ? '' : 'add-margin-to-btn'
-    }}"
-    (click)="filterMap()"
-  >
+  <button class="default-button filter-button" (click)="filterMap()">
     Filter
   </button>
 </div>
