--- a/molenapplicatie.client/src/app/root/root.component.scss
+++ b/molenapplicatie.client/src/app/root/root.component.scss
@@ -39,6 +39,10 @@ header,
   align-items: center;
 }
 
+.responsive .topInfoContent {
+  flex-direction: column;
+}
+
 .MolenImageCount {
   font-weight: 600;
   font-size: 20px;
@@ -107,10 +111,24 @@ header,
   width: 500px;
 }
 
+  .responsiveheader{
+    display: none;
+  }
+  .header {
+    display: flex;
+  }
+
 @media screen and (max-width: $Media_width) {
   .container,
   header {
     width: 85%;
+  }
+
+  .responsiveheader{
+    display: flex;
+  }
+  .header {
+    display: none;
   }
 
   .container {
