Refactor styles and improve code readability across components
- Updated SCSS imports to use consistent quotation marks.
- Improved formatting of nested selectors in SCSS files for better readability.
- Changed background color values in SCSS files to lowercase for consistency.
- Enhanced HTML structure by formatting attributes for better readability.
- Removed unused imports in TypeScript files to clean up the code.
- Updated test specifications to maintain consistent formatting.
- Refactored toast component HTML for improved readability and structure.
- Updated index.html to use self-closing tags where applicable.
- Improved main.ts formatting for better readability.
- Cleaned up proxy configuration for better readability and consistency.

--- a/molenapplicatie.client/src/app/app.component.scss
+++ b/molenapplicatie.client/src/app/app.component.scss
@@ -1,8 +1,8 @@
-@import '../Utils/Variables.scss';
+@import "../Utils/Variables.scss";
 
 .container {
   margin: auto;
   width: 95%;
-  color: #0058A2;
+  color: #0058a2;
   display: flex;
 }
