--- a/molenapplicatie.client/src/app/error-message/error-message.component.html
+++ b/molenapplicatie.client/src/app/error-message/error-message.component.html
@@ -1,4 +1,7 @@
 <div class="ErrorDiv">
   <span>De molens kunnen niet gevonden worden!</span> <br />
-  <img src="Assets/Background/Buurman-en-Buurman-Error.png" alt="Alternate Text" />
+  <img
+    src="Assets/Background/Buurman-en-Buurman-Error.png"
+    alt="Alternate Text"
+  />
 </div>
