--- a/molenapplicatie.client/src/app/loader/loader.component.html
+++ b/molenapplicatie.client/src/app/loader/loader.component.html
@@ -1,3 +1,7 @@
-<div *ngIf="isLoadingVisible" class="loader-container" [ngClass]="isLoading ? 'loadingVisible' : 'loadingNotVisible'">
+<div
+  *ngIf="isLoadingVisible"
+  class="loader-container"
+  [ngClass]="isLoading ? 'loadingVisible' : 'loadingNotVisible'"
+>
   <div class="loader"></div>
 </div>
