--- a/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.scss
+++ b/molenapplicatie.client/src/app/dialogs/filter-map/filter-map.component.scss
@@ -2,7 +2,7 @@
   width: 300px;
   padding: 30px;
   margin-bottom: 50px;
-  
+
   text-align: center;
 }
 
@@ -35,7 +35,7 @@
   border-color: #2bff00;
 }
 
-.remove-filter-container{
+.remove-filter-container {
   text-align: left;
 }
 
@@ -43,7 +43,7 @@
   background-color: #28a74665;
   color: black;
   border: none;
-  padding:10px;
+  padding: 10px;
   font-size: 12px;
   font-weight: bold;
   border-radius: 15px;
@@ -138,10 +138,10 @@
   background-color: #f0f0f0;
 }
 
-.dropdown-container{
+.dropdown-container {
   width: 250px;
   margin: auto;
 }
-.custom-dropdown-panel{
-  color:red
+.custom-dropdown-panel {
+  color: red;
 }
