--- a/molenapplicatie.client/src/app/image-selector/image-selector.component.scss
+++ b/molenapplicatie.client/src/app/image-selector/image-selector.component.scss
@@ -5,15 +5,15 @@
 }
 
 .main-image {
-  height:72vh;
+  height: 72vh;
 }
 
 .main-image img {
   width: 100%;
   height: auto;
   max-height: 100%;
-  padding:2px;
-  cursor:pointer;
+  padding: 2px;
+  cursor: pointer;
 }
 
 .main-image img:hover {
@@ -51,7 +51,8 @@
   border: 2px solid transparent;
 }
 
-.selected, .thumbnail:hover {
+.selected,
+.thumbnail:hover {
   transform: scale(1.1);
   border: 2px solid white;
 }
