Refactor interfaces and services: Add RecentAddedImages interface and update MolenService to handle recent images in responses

--- a/molenapplicatie.client/src/app/map-page/map-page.component.html
+++ b/molenapplicatie.client/src/app/map-page/map-page.component.html
@@ -4,3 +4,9 @@
   </section>
   <router-outlet></router-outlet>
 </layout>
+<app-popup
+  [visible]="isPopupVisible"
+  [imageUrl]="'assets/info.png'"
+  [text]="'This is a helpful message for your user.'"
+>
+</app-popup>
